# Egnim

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/load_project/: CMakeLists.txt  main.cpp
examples/physics_scenes/: CMakeLists.txt  boxes_state.cpp  example_game.cpp  main.cpp
examples/physics_scenes/include/: boxes_state.h  example_game.h  game.h
examples/physics_scenes/src/: boxes_state.cpp  example_game.cpp  game.cpp  main.cpp
examples/simple_scene/: CMakeLists.txt
examples/simple_scene/src/: main.cpp
src/egnim/editor/: CMakeLists.txt  about_dialog.cpp  action_manager.cpp  document.cpp  document_manager.cpp  editor.cpp  file_system_dock.cpp  file_system_watcher.cpp  game_document.cpp  game_editor.cpp  inspector_dock.cpp  issue.cpp  language_manager.cpp  logging_manager.cpp  main.cpp  main_window.cpp  meta_types.cpp  new_project_dialog.cpp  no_editor_widget.cpp  preferences_manager.cpp  scene_dock.cpp  settings_dialog.cpp  style_manager.cpp  undo_dock.cpp  utils.cpp
src/egnim/editor/commands/: add_remove_document.cpp  command.cpp  group_command.cpp
src/egnim/editor/document/: document.cpp  document_editor.cpp  document_manager.cpp  document_serializer.cpp  inspector_dock.cpp  new_document_dialog.cpp  no_document_widget.cpp  nodes_dock.cpp  nodes_scene.cpp  nodes_view.cpp  scene_dock.cpp  scene_document.cpp  scene_editor.cpp  undo_dock.cpp
src/egnim/editor/document/priv/: document_serializer_impl.cpp  json_document_serializer_impl.cpp  json_document_serializer_impl.h
src/egnim/editor/models/: file_system_model.cpp  file_system_proxy_model.cpp
src/egnim/editor/project/: console_dock.cpp  export_manager.cpp  export_preset.cpp  export_preset_list_model.cpp  export_preset_widget.cpp  export_project_dialog.cpp  export_template.cpp  export_template_list_model.cpp  file_system_dock.cpp  game_editor.cpp  game_project.cpp  issue_dock.cpp  new_directory_dialog.cpp  new_project_dialog.cpp  no_project_widget.cpp  open_documents_widget.cpp  open_project_dock.cpp  project.cpp  project_dock.cpp  project_editor.cpp  project_list_delegate.cpp  project_list_model.cpp  project_manager.cpp  project_serializer.cpp  rename_directory_dialog.cpp  rename_file_dialog.cpp  undo_dock.cpp
src/egnim/editor/project/priv/: json_project_serializer_impl.cpp  json_project_serializer_impl.h  project_serializer_impl.cpp  project_serializer_impl.h
src/egnim/editor/utils/: dpi_info.cpp  zip_file.cpp
src/egnim/editor/widgets/: deselectable_tree_view.cpp  dialog_with_toggle_view.cpp  file_dialog.cpp  line_edit_with_history.cpp
src/egnim/engine/: CMakeLists.txt
src/egnim/engine/actions/: action.cpp  action_manager.cpp  follow_action.cpp
src/egnim/engine/core/: animated_sprite.cpp  animated_sprite_node.cpp  camera.cpp  cell.cpp  chunk.cpp  command_queue.cpp  component.cpp  component_container.cpp  context.cpp  event.cpp  event_dispatcher.cpp  event_listener.cpp  game.cpp  group_layer.cpp  label_node.cpp  layer.cpp  light_node.cpp  main_loop.cpp  music_node.cpp  node.cpp  node_factory.cpp  scene_node.cpp  sound_node.cpp  sprite_node.cpp  state.cpp  state_stack.cpp  tile.cpp  tile_layer.cpp  tile_layer_iterator.cpp  tile_map.cpp  tile_map_layer.cpp  tileset.cpp
src/egnim/engine/core/priv/: isometric_tile_map_renderer.cpp  isometric_tile_map_renderer.h  orthogonal_tile_map_renderer.cpp  orthogonal_tile_map_renderer.h  tile_map_renderer.cpp  tile_map_renderer.h
src/egnim/engine/events/: contact_event.cpp  contact_event_listener.cpp  event.cpp  event_dispatcher.cpp  event_listener.cpp  joystick_event.cpp  joystick_event_listener.cpp  keyboard_event.cpp  keyboard_event_listener.cpp  mouse_event.cpp  mouse_event_listener.cpp  music_event.cpp  music_event_listener.cpp  sound_event.cpp  sound_event_listener.cpp  state_event.cpp  state_event_listener.cpp  window_event.cpp  window_event_listener.cpp
src/egnim/engine/events/priv/: event_listener_vector.cpp  event_listener_vector.h
src/egnim/engine/graphics/: animated_sprite.cpp  cell.cpp  chunk.cpp  group_layer.cpp  group_layer_iterator.cpp  layer.cpp  tile.cpp  tile_layer.cpp  tile_layer_iterator.cpp  tile_map.cpp  tileset.cpp
src/egnim/engine/graphics/priv/: isometric_tile_map_impl.cpp  isometric_tile_map_impl.h  isometric_tile_map_renderer.cpp  isometric_tile_map_renderer.h  orthogonal_tile_map_impl.cpp  orthogonal_tile_map_impl.h  orthogonal_tile_map_renderer.cpp  orthogonal_tile_map_renderer.h  tile_map_impl.cpp  tile_map_impl.h  tile_map_renderer.cpp  tile_map_renderer.h
src/egnim/engine/physics/: dynamic_body.cpp  kinematic_body.cpp  physics_aabb.cpp  physics_body.cpp  physics_contact.cpp  physics_contact_impulse.cpp  physics_joint.cpp  physics_manifold.cpp  physics_manifold_point.cpp  physics_mass.cpp  physics_mass_info.cpp  physics_material.cpp  physics_shape.cpp  physics_world.cpp  static_body.cpp
src/egnim/engine/physics/priv/: b2_casters.cpp  b2_casters.h  b2_physics_casters.cpp  b2_physics_casters.h  b2_physics_world_callbacks.cpp  b2_physics_world_callbacks.h  dynamic_body_impl.cpp  dynamic_body_impl.h  kinematic_body_impl.cpp  kinematic_body_impl.h  physics_debug_draw.cpp  physics_debug_draw.h  physics_helper.cpp  physics_helper.h  physics_world_callbacks.cpp  physics_world_callbacks.h  physics_world_impl.cpp  physics_world_impl.h  static_body_impl.cpp  static_body_impl.h
src/egnim/engine/scene/: animated_sprite_node.cpp  camera.cpp  camera_manager.cpp  camera_node.cpp  component.cpp  component_container.cpp  label_node.cpp  music_node.cpp  node.cpp  node_factory.cpp  node_iterator.cpp  scene_node.cpp  scene_serializer.cpp  scene_state.cpp  sound_node.cpp  sprite_node.cpp  tile_map_node.cpp
src/egnim/engine/scene/priv/: json_scene_serializer_impl.cpp  json_scene_serializer_impl.h  scene_serializer_impl.h
src/egnim/tools/shared/: CMakeLists.txt  dialog_with_toggle_view.cpp  dpi_info.cpp  extended_file_dialog.cpp  line_edit_with_history.cpp  zip_file.cpp
src/egnim/tools/shared/qdpi/: qdpiinfo.cpp
tests/engine/: CMakeLists.txt
tests/engine/core/: CMakeLists.txt
tests/engine/src/: main.cpp
(+357 files in other folders)
