# -------------------------------------------------------------------------------------------------- #
# -------------------------------- Set CMake version and project ----------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(EGNIM VERSION 0.1.0 LANGUAGES CXX)
# -------------------------------------------------------------------------------------------------- #
# ---------------------------------- Include config and macros ------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
include(${EGNIM_SOURCE_DIR}/cmake/config.cmake)
include(${EGNIM_SOURCE_DIR}/cmake/macros.cmake)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #

add_subdirectory(dependencies)
add_subdirectory(src/egnim)

if(EGNIM_BUILD_TEST)
    add_subdirectory(tests)
endif()

if(EGNIM_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
# -------------------------------------------------------------------------------------------------- #
# ------------------------------ Generate and install documentation -------------------------------- #
# -------------------------------------------------------------------------------------------------- #
if(EGNIM_BUILD_DOCUMENTATION)
    egnim_generate_documentation()
    egnim_install_documentation()
endif()
# -------------------------------------------------------------------------------------------------- #

