# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# --------------------------- Generate headers and set files variable ------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNIM_SOURCE_DIR}/examples/simple_scene/src)
set(include_root ${EGNIM_SOURCE_DIR}/examples/simple_scene/include)

set(sources
    ${source_root}/main.cpp)

set(includes)
# -------------------------------------------------------------------------------------------------- #
# --------------------------------- Define the abovo-test target ----------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_executable(egnim-example-simple-scene ${sources} ${includes})
# -------------------------------------------------------------------------------------------------- #
# -------------------------------- Define the abovo-test features ---------------------------------- #
# -------------------------------------------------------------------------------------------------- #
set_target_properties(egnim-example-simple-scene PROPERTIES COMPILE_FEATURES cxx_std_17)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Setup include directories ------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
target_include_directories(egnim-example-simple-scene
                           PUBLIC $<BUILD_INTERFACE:${ABOVO_SOURCE_DIR}/examples/simple_scene/include>)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Setup dependencies ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
target_link_libraries(egnim-example-simple-scene
                      PUBLIC egnim::egnim-engine)
# -------------------------------------------------------------------------------------------------- #
